@@ -1,0 +1,10 @@
+/* { dg-do run } */
+/* { dg-data {c*} {0x10 0x20 0x30 0x40  0x50 0x60 0x70 0x80   0x90 0xa0 0xb0 0xc0} } */
+
+/* { dg-command { var foo = unmap (byte[2][2] @ 0#B) } } */
+/* { dg-command { foo[0]'mapped } } */
+/* { dg-output "0" } */
+/* { dg-command { foo[1]'mapped } } */
+/* { dg-output "\n0" } */
+/* { dg-command { foo'mapped } } */
+/* { dg-output "\n0" } */
