@@ -1,0 +1,17 @@
+/* { dg-do run } */
+/* { dg-data {c*} {0x10 0x20 0x30 0x40  0x50 0x60 0x70 0x80   0x90 0xa0 0xb0 0xc0} } */
+
+type Foo =
+ struct
+ {
+   struct { byte a; } sa;
+   struct { byte b; } sb;
+ };
+
+/* { dg-command { var foo = unmap (Foo @ 0#B) } } */
+/* { dg-command { foo.sa'mapped } } */
+/* { dg-output "0" } */
+/* { dg-command { foo.sb'mapped } } */
+/* { dg-output "\n0" } */
+/* { dg-command { foo'mapped } } */
+/* { dg-output "\n0" } */
